--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,4 +18,6 @@
         <activity android:name=".AddContactsActivity"></activity>
     </application>
 
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
 </manifest>
